src/content.css
body {
  margin: 0 !important;
  padding: 0 !important;
}

img {
  pointer-events: auto !important;
  user-select: auto !important;
  -moz-user-select: auto !important;
  touch-action: auto !important;
}

/* centers images in the middle of the page */
.imageExtractCenterStyle {
  margin-left: auto !important;
  margin-right: auto !important;
  display: block !important;
}

/* full page navigation */
#imageExtractUIContainer {
  width: 100% !important;
  background-color: lightyellow !important;
  margin: 0 !important;
  padding: 0 !important;
  display: flex !important;
  flex-direction: column !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  position: relative !important;
}

#imageExtractUIRow1, #imageExtractUIRow2 {
  width: 100% !important;
  background-color: lightyellow !important;
  margin: 0 !important;
  padding: 0 !important;
  display: flex !important;
  flex-direction: row !important;
  justify-content: center !important;
  flex-wrap: wrap !important;
  position: relative !important;
}

p {
    font-size: small !important;
    font-style: normal !important;
    color: black !important;
    text-align: center !important;
    margin: 4px !important;
    padding: 0 !important;
}

/* each toggle + label container */
.imageExtractUI {
  margin: 0 !important;
  padding: 0 !important;
  display: flex !important;
  flex-direction: row !important;
  position: relative !important;
  padding-left: 5px
}

.imageExtractUI:nth-child(odd) {
  background-color: #0000000f !important;
}

/* align under the toggle button */
.imageExtractLabel {
  text-align: center !important;
  font-family: sans-serif !important;
  font-size: 14px !important;
  color: black !important;
  margin: auto !important;
  padding: 10px !important;
  padding-left: 2px !important;
  position: relative !important;
  padding-right: 5px
}

.imageExtractCheckbox {
  text-align: center !important;
  margin: auto !important;
  padding: 0 !important;
  position: relative !important;
}

.hideImage {
  display: none !important;
}

